
src/aftershock_fdsn_maps.py
    2021-02-17 Manoch: v.2021.048 r2.3 updated the usage message.
    2021-02-13 Manoch: v.2021.044 r2.2 updated heatmap scale label
    2021-02-09 Manoch: v.2021.040 r2.1 public release
    2020-08-22 Manoch: v.2020.236 FDSN support
    2020-08-01 Manoch: v.2020.214 R2 release
    2014-12-17 Alex: r1, development and initial release

param/aftershock_fdsn_maps_param.py
    2021-02-09 Manoch: v.2021.040 r2.1 public release
    2020-08-22 Manoch: v.2020.236 FDSN support
    2020-08-01 Manoch: v.2020.214 release

lib/event_fdsn_lib.py
    2021-02-09 Manoch: v.2021.040 r2.1 public release
    2020-08-22 Manoch: v.2020.236 FDSN

lib/aftershocks_fdsn_lib.py
    2021-02-09 Manoch: v.2021.040 r2.1 public release
    2020-08-22 Manoch: v.2020.236 FDSN
    2020-08-01 Manoch: v.2020.214 release